Implemented Login module, component, added some stylings for the login page, integrated login module into the application.

--- a/src/app/shared/styles/button.scss
+++ b/src/app/shared/styles/button.scss
@@ -8,4 +8,7 @@ button {
   background: var(--main-blue);
   cursor: pointer;
   font-weight: bold;
+  margin: auto;
+  max-width: 250px;
+  width: 100%;
 }
