--- a/src/app/shared/styles/color.scss
+++ b/src/app/shared/styles/color.scss
@@ -1,11 +1,5 @@
 :root {
   --main-blue: #0C3864;
-  --main-red: #ff3737;
-  --main-green: #539A00;
-  --main-grey: #646464;
-  --dark-grey: #404040;
-  --secondary-grey: #8E8E8E;
-  --third-grey: #F0F0F0;
+  --error: #ff3737;
   --input-border: #377BA733;
-  --light-blue: rgba(12, 56, 100, 0.2);
 }
