Implemented login functionality using auth store state

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,8 @@
 <router-outlet></router-outlet>
+
+<div *ngIf="isLoading" class="over-screen-container">
+  <div class="overlay"></div>
+  <div class="above-item">
+    <p>Loading...</p>
+  </div>
+</div>
