Added favorites and contacts modules.

--- a/src/app/login/login/login.component.scss
+++ b/src/app/login/login/login.component.scss
@@ -14,7 +14,7 @@
   &-box {
     width: 500px;
     padding: 50px;
-    border: 1px solid var(--input-border);
+    border: 1px solid var(--blue-grey);
     border-radius: 5px;
 
     .login-box-title {
