--- a/src/app/shared/styles/form.scss
+++ b/src/app/shared/styles/form.scss
@@ -52,7 +52,7 @@ form {
   }
 
   input[type='text'] {
-    border: 1px solid var(--input-border);
+    border: 1px solid var(--blue-grey);
     border-radius: 5px;
     padding: 10px 15px;
     outline: none;
@@ -63,7 +63,7 @@ form {
   }
 
   input[type='password'] {
-    border: 1px solid var(--input-border);
+    border: 1px solid var(--blue-grey);
     border-radius: 5px;
     padding: 10px 15px;
     outline: none;
