Implemented get all contacts store functionality, added mock contacts.

--- a/src/app/dashboard/side-menu/side-menu.component.html
+++ b/src/app/dashboard/side-menu/side-menu.component.html
@@ -1,11 +1,11 @@
 <div class="side-menu">
-  <div class="menu-option">
+  <div (click)="navigateTo(APP_STATIC_ROUTES.CONTACTS)" class="menu-option">
     <div class="icon">
       <i class="fa fa-address-book"></i>
     </div>
     <p>Contacts</p>
   </div>
-  <div class="menu-option">
+  <div (click)="navigateTo(APP_STATIC_ROUTES.FAVORITES)" class="menu-option">
     <div class="icon">
       <i class="fa fa-star"></i>
     </div>
