--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -7,8 +7,7 @@
       <side-menu></side-menu>
     </div>
     <div class="app-page">
-
+      <router-outlet></router-outlet>
     </div>
   </div>
-
 </div>
