--- a/src/app/dashboard/side-menu/side-menu.component.scss
+++ b/src/app/dashboard/side-menu/side-menu.component.scss
@@ -14,6 +14,10 @@
     padding: 10px 20px;
     cursor: pointer;
 
+    &:hover {
+      background: var(--light-blue);
+    }
+
     .icon {
       width: 25px;
       display: flex;
