Implemented store functionalities for create and delete contacts, and implemented generic table style

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <router-outlet></router-outlet>
 
-<div *ngIf="isLoading" class="over-screen-container">
+<div *ngIf="!isLoading" class="over-screen-container">
   <div class="overlay"></div>
   <div class="above-item">
-    <p>Loading...</p>
+    <p>Loading... {{isLoading}}</p>
   </div>
 </div>
