--- a/src/app/shared/styles/table.scss
+++ b/src/app/shared/styles/table.scss
@@ -1,7 +1,73 @@
 table {
   display: flex;
+  flex-direction: column;
   width: 100%;
   height: 100%;
+
+  thead {
+    width: 100%;
+    display: flex;
+    height: 75px;
+
+    tr {
+      width: 100%;
+      display: flex;
+
+      td {
+        width: 100%;
+        display: flex;
+        font-size: 18px;
+        font-weight: bold;
+        color: var(--main-blue);
+        padding: 5px;
+
+        &:first-child {
+          width: 100px;
+        }
+
+        &:nth-child(2) {
+          width: 100px;
+        }
+      }
+    }
+  }
+
+  tbody {
+    width: 100%;
+    height: calc(100% - 75px);
+
+    tr {
+      width: 100%;
+      display: flex;
+
+      td {
+        width: 100%;
+        display: flex;
+        font-size: 18px;
+        font-weight: bold;
+        color: #575757;
+        padding: 5px;
+        vertical-align: center;
+
+        &:first-child {
+          width: 100px;
+
+          i {
+            cursor: pointer;
+            margin: auto;
+          }
+        }
+
+        &:nth-child(2) {
+          width: 100px;
+        }
+
+        &:nth-child(4) {
+          text-transform: capitalize;
+        }
+      }
+    }
+  }
 
 
 }
