--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <router-outlet></router-outlet>
 
-<div *ngIf="!isLoading" class="over-screen-container">
+<div *ngIf="showLoading" class="over-screen-container">
   <div class="overlay"></div>
   <div class="above-item">
-    <p>Loading... {{isLoading}}</p>
+    <p>Loading...</p>
   </div>
 </div>
