--- a/src/app/shared/styles/main.scss
+++ b/src/app/shared/styles/main.scss
@@ -8,7 +8,7 @@ html, body {
   margin: 0;
   padding: 0;
   outline: none;
-  font-family: 'Corbel', 'Arial', monospace;
+  font-family: monospace;
 }
 
 *:before, *:after {
