--- a/src/app/dashboard/contacts/contacts.component.html
+++ b/src/app/dashboard/contacts/contacts.component.html
@@ -15,7 +15,8 @@
       <td>Email</td>
       <td>Name</td>
       <td>Phone</td>
-      <td></td>
+      <td class="icon-td"></td>
+      <td class="icon-td"></td>
     </tr>
     </thead>
     <hr>
