Implemented update contact.

--- a/src/app/dashboard/contacts/contact-modal/contact-modal.component.html
+++ b/src/app/dashboard/contacts/contact-modal/contact-modal.component.html
@@ -51,7 +51,7 @@
 
     <!-- Submit Form -->
     <button (click)="onSubmit()" [disabled]="form.invalid" class="submit-form-button">
-      Create Contact
+      {{ isEditMode ? 'Update Contact' : 'Create Contact' }}
     </button>
   </form>
 </div>
