--- a/src/app/dashboard/side-menu/side-menu.component.scss
+++ b/src/app/dashboard/side-menu/side-menu.component.scss
@@ -14,6 +14,10 @@
     padding: 10px 20px;
     cursor: pointer;
 
+    &.selected {
+      background: var(--light-blue);
+    }
+
     &:hover {
       background: var(--light-blue);
     }
@@ -26,7 +30,7 @@
       > i {
         margin: auto;
         font-size: 25px;
-        color: var(--main-blue);
+        color: var(--grey);
       }
     }
 
@@ -34,7 +38,7 @@
     > p {
       font-size: 20px;
       font-weight: bold;
-      color: var(--main-blue);
+      color: var(--grey);
     }
 
   }
