--- a/src/app/shared/styles/table.scss
+++ b/src/app/shared/styles/table.scss
@@ -7,6 +7,7 @@ table {
   thead {
     width: 100%;
     display: flex;
+    flex-direction: column;
 
     tr {
       width: 100%;
@@ -28,6 +29,13 @@ table {
         &:nth-child(2) {
           max-width: 125px;
           width: 100%;
+        }
+
+        input[type='text'] {
+          border: 1px solid var(--blue-grey);
+          border-radius: 5px;
+          padding: 10px 15px;
+          outline: none;
         }
       }
     }
