Implemented favorites page, implemented remove from favorites from favorites page, implemented search in favorites table.

--- a/src/app/shared/styles/table.scss
+++ b/src/app/shared/styles/table.scss
@@ -33,6 +33,7 @@ table {
 
         input[type='text'] {
           border: 1px solid var(--blue-grey);
+          width: 100%;
           border-radius: 5px;
           padding: 10px 15px;
           outline: none;
